--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "prettier": "^1.15.1"
   },
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "envalid": "^4.1.4",
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
