--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:10.15.1
       
-    working_directory: ~/server/client
+    working_directory: ~/repo/server/client
 
     steps:
       - checkout
