--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,17 +9,15 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:10.15.1
       
-    working_directory: ~/server/client
+    working_directory: ~/repo
 
     steps:
       - checkout
 
       # Download and cache dependencies
       - restore_cache:
-          paths:
-            - server/client/node_modules
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-{{ checksum "~/server/client/package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
@@ -27,8 +25,8 @@ jobs:
 
       - save_cache:
           paths:
-            - server/client/node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+            - ~/repo/server/client/node_modules
+          key: v1-dependencies-{{ checksum "~/server/client/package.json" }}
         
       # run tests!
       - run: cd server/client; yarn test
