--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "~/server/client/package.json" }}
+          - v1-dependencies-{{ checksum "~/repo/server/client/package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
@@ -26,7 +26,7 @@ jobs:
       - save_cache:
           paths:
             - ~/repo/server/client/node_modules
-          key: v1-dependencies-{{ checksum "~/server/client/package.json" }}
+          key: v1-dependencies-{{ checksum "~/repo/server/client/package.json" }}
         
       # run tests!
       - run: cd server/client; yarn test
