--- a/server/client/package.json
+++ b/server/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "materialize-css": "^1.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
