--- a/server/package.json
+++ b/server/package.json
@@ -26,11 +26,13 @@
     "prettier": "^1.15.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cookie-session": "^2.0.0-beta.3",
     "envalid": "^4.1.4",
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
