--- a/server/client/package.json
+++ b/server/client/package.json
@@ -9,7 +9,9 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "redux": "^4.0.1"
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "history": "^4.9.0",
