--- a/server/package.json
+++ b/server/package.json
@@ -27,12 +27,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
     "envalid": "^4.1.4",
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "redux-thunk": "^2.3.0"
+    "stripe": "^6.28.0"
   }
 }
