--- a/server/client/package.json
+++ b/server/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "materialize-css": "^1.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
