--- a/server/client/package.json
+++ b/server/client/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
+    "materialize-css": "^1.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "history": "^4.9.0",
+    "http-proxy-middleware": "^0.19.1",
+    "react-testing-library": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,8 +33,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "http-proxy-middleware": "^0.19.1"
-  }
+  ]
 }
