--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "yarn --cwd client start ",
-    "dev": "concurrently \"yarn run server\" \"yarn run client\""
+    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn --cwd client install && yarn --cwd run build"
   },
   "author": "Zac Braddy",
   "license": "MIT",
@@ -26,11 +27,13 @@
     "prettier": "^1.15.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
     "envalid": "^4.1.4",
     "express": "^4.16.4",
     "mongoose": "^5.4.6",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "stripe": "^6.28.0"
   }
 }
