--- a/server/package.json
+++ b/server/package.json
@@ -3,27 +3,21 @@
   "version": "1.0.0",
   "description": "The server side for budgie, my budget program for myself",
   "engines": {
-    "node": "10.15.0",
-    "npm": "6.4.1"
+    "node": "10.15.0"
   },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js",
-    "client": "yarn --cwd client start ",
-    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false yarn --cwd client install && yarn --cwd run build"
+    "dev": "nodemon index.js"
   },
   "author": "Zac Braddy",
   "license": "MIT",
   "devDependencies": {
-    "concurrently": "^4.1.0",
     "eslint": "5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "nodemon": "^1.18.9",
     "prettier": "^1.15.1"
   },
   "dependencies": {
