Made it so that we only install client deps if we aren't in production

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node ./server/index.js",
     "dev": "concurrently \"yarn --cwd server run dev\" \"yarn --cwd client start\"",
     "heroku-postbuild": "YARN_PRODUCTION=false yarn --cwd client install && yarn --cwd run build",
-    "postinstall": "yarn --cwd server install && yarn --cwd client install"
+    "postinstall": "yarn --cwd server install && if [[ ${NODE_ENV} != \"production\" ]]; then yarn --cwd client install; fi"
   },
   "author": "Zac Braddy",
   "license": "MIT",
