--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "nodemon": "^1.18.11",
     "prettier": "^1.15.1"
   },
   "dependencies": {
