--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,16 +17,16 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "~/repo/server/client/package.json" }}
+          - v1-dependencies-{{ checksum "~/repo/client/package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: cd server/client; yarn install
+      - run: cd client; yarn install
 
       - save_cache:
           paths:
-            - ~/repo/server/client/node_modules
-          key: v1-dependencies-{{ checksum "~/repo/server/client/package.json" }}
+            - ~/repo/client/node_modules
+          key: v1-dependencies-{{ checksum "~/repo/client/package.json" }}
         
       # run tests!
-      - run: cd server/client; yarn test
+      - run: cd client; yarn test
