Trying to fix requires to match schema

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,12 +51,14 @@ workflows:
     jobs:
       - build
       - test:
-          requires: build
+          requires: 
+            - build
           filters:
             branches:
               only: /^(feature|hotfix)\/.*?$/
       - deploy:
-          requires: test
+          requires: 
+            - test
           filters:
             branches:
               only: develop
