Test won't run on develop so deploy should rely on build rather than test job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ workflows:
               only: /^(feature|hotfix)\/.*?$/
       - deploy:
           requires: 
-            - test
+            - build
           filters:
             branches:
               only: develop
