--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ jobs:
     working_directory: ~/repo
 
     steps:
+      - checkout
+
       # run tests!
       - run: cd client; yarn install && yarn test
 
