--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,8 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/node:10.15.1
+      - image: circleci/node:10.15.2
       
     working_directory: ~/repo
 
@@ -21,12 +16,51 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: cd client; yarn install
+      - run: yarn install
 
       - save_cache:
           paths:
             - ~/repo/client/node_modules
           key: v1-dependencies-{{ checksum "~/repo/client/package.json" }}
         
+  test:
+    docker: 
+      - image: circleci/node:10.15.2
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
       # run tests!
-      - run: cd client; yarn test
+      - run: cd client; yarn install && yarn test
+
+  deploy:
+    docker:
+      - image: buildpack-deps:trusty
+
+    steps:
+      - checkout
+
+      - run:
+          name: Deploy develop to Heroku
+          command: |
+            "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git develop"
+
+workflows:
+  version: 2
+  build-test-deploy:
+    jobs:
+      - build
+      - test:
+          requires: 
+            - build
+          filters:
+            branches:
+              only: /^(feature|hotfix)\/.*?$/
+      - deploy:
+          requires: 
+            - build
+          filters:
+            branches:
+              only: develop
