--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,10 @@ workflows:
   version: 2
   build-test-deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              only: /^(feature|hotfix)\/.*?$/
       - test:
           requires: 
             - build
