--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "materialize-css": "^1.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-materialize": "^3.2.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
