--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "history": "^4.9.0",
     "http-proxy-middleware": "^0.19.1",
+    "jest-dom": "^3.2.2",
     "react-testing-library": "^6.0.0"
   },
   "scripts": {
