--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "The server side for budgie, my budget program for myself",
   "engines": {
-    "node": "10.16.1"
+    "node": "10.16.1",
+    "yarn": "1.17.3"
   },
   "main": "index.js",
   "scripts": {
