--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "My budget program for myself",
   "engines": {
-    "node": "10.15.2",
-    "yarn": "1.13.0"
+    "node": "10.16.1",
+    "yarn": "1.17.3"
   },
   "scripts": {
     "start": "node ./server/index.js",
@@ -15,6 +15,7 @@
   "author": "Zac Braddy",
   "license": "MIT",
   "devDependencies": {
-    "concurrently": "^4.1.0"
-  }
+    "concurrently": "^4.1.1"
+  },
+  "dependencies": {}
 }
