--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "My budget program for myself",
   "engines": {
-    "node": "10.16.2",
+    "node": "10.16.3",
     "yarn": "1.17.3"
   },
   "scripts": {
@@ -17,5 +17,7 @@
   "devDependencies": {
     "concurrently": "^4.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "firebase": "^7.2.2"
+  }
 }
