--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.11.0",
     "react-materialize": "^3.4.1",
     "react-redux": "^7.1.1",
+    "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-stripe-checkout": "^2.6.3",
