--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "ramda": "^0.26.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-firebaseui": "^4.0.0",
     "react-materialize": "^3.4.1",
     "react-redux": "^7.1.1",
     "react-redux-firebase": "^3.0.5",
@@ -15,7 +16,8 @@
     "react-scripts": "3.2.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.0",
