Feature/clean up authn (#28)
* INTERIM COMMIT starting bringing in firebase auth

* Made it so you can log in and out of the app with firebase

* Brought in react redux firebase to sort my shit out

* Completed authentication

* Updating node version in circleci

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,1 +1,9 @@
 REACT_APP_STRIPE_KEY=pk_test_0R4ehhHYn4PKfjPWEejyvdXG
+REACT_APP_FIREBASE_APIKEY=AIzaSyBkHX10fGlt8OqKtDx887rvvEsz3Ggy8yo
+REACT_APP_FIREBASE_AUTHDOMAIN=budgie-dev.firebaseapp.com
+REACT_APP_FIREBASE_DATABASEURL=https://budgie-dev.firebaseio.com
+REACT_APP_FIREBASE_PROJECTID=budgie-dev
+REACT_APP_FIREBASE_STORAGEBUCKET=budgie-dev.appspot.com
+REACT_APP_FIREBASE_MESSAGINGSENDERID=42938043190
+REACT_APP_FIREBASE_APPID=1:42938043190:web:69dcd7a9fcf2edd7244197
+REACT_APP_FIREBASE_MEASUREMENTID=G-6S1GHQQ19J
