--- a/client/package.json
+++ b/client/package.json
@@ -6,24 +6,27 @@
     "axios": "^0.19.0",
     "materialize-css": "^1.0.0",
     "ramda": "^0.26.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-materialize": "^3.3.4",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-firebaseui": "^4.0.0",
+    "react-materialize": "^3.4.1",
+    "react-redux": "^7.1.1",
+    "react-redux-firebase": "^3.0.5",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^8.0.7",
-    "@testing-library/react-hooks": "^1.1.0",
-    "history": "^4.9.0",
-    "http-proxy-middleware": "^0.19.1",
+    "@testing-library/jest-dom": "^4.2.0",
+    "@testing-library/react": "^9.3.0",
+    "@testing-library/react-hooks": "^3.1.1",
+    "history": "^4.10.1",
+    "http-proxy-middleware": "^0.20.0",
     "jest-dom": "^4.0.0",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.11.0",
     "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
